# Data-Engineering-Practice

./: .gitignore  README.md  TODO.md  TODO.txt
Azure/Synapse/linkedService/: tasynapse1-WorkspaceDefaultSqlServer.json  tasynapse1-WorkspaceDefaultStorage.json
Azure/Synapse/notebook/: Explore Kaggle Movie Dataset.json  MovieRatings Task 1.json  Test MovieRatings Task 1.json  Tutorial.json
CodeGym/Rust/comprehensive-rust-course/: .dockerignore  Cargo.toml  Dockerfile
CodeGym/Rust/comprehensive-rust-course/src/: main.rs
CodeGym/Rust/tutorial/: Cargo.toml
CodeGym/Spark/: README.md
CodeGym/Spark/PartitionsExperiment/: buildrun_partitionsExperiment.sh
CodeGym/Spark/WordCount/: SparkWordCount.scala
CodeGym/Spark/tutorial-samples/: links.txt  pageRank.py
ScalaPlayground/.metals/: metals.mv.db
SparkGym/: README.md
SparkGym/KaggleMovieRatings/: KaggleMovies.scala  README.md  build.sbt
SparkGym/PartitionsExperiment/: build.sbt  debug_log.txt
SparkGym/WordCount/: build.sbt  buildrun_wordcount.sh
SparkGym/tutorial-samples/: spark-config-compare.txt  wordCount.py
SparkPlayground/: README.md  sparkShellPractice.scala
SparkPlayground/.metals/: metals.lock.db  metals.mv.db
SparkPlayground/tutorial-samples/: pageRank.py  sparkShellPractice.scala
SparkTheory/: SparkTheoryAug22.txt  SparkTheoryNov22.txt
Theory/Rust/: RustTheory.txt  RustTheoryJan2023.txt
Theory/Spark/: SparkTheoryNov22.txt  SparkTheorySep22.txt
metastore_db/: db.lck  service.properties
tasynapse1/: TemplateForWorkspace.json  TemplateParametersForWorkspace.json
(+92 files in other folders)
