[package]
name = "exercise"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.28.1", features = ["full"] }
reqwest = { version = "0.11.12", features = ["blocking", "rustls-tls"] }
scraper = "0.13.0"
thiserror = "1.0.37"
futures-util = "0.3.28"
http = "0.2.9"
tokio-websockets = "0.3.2"
bytes = "1.3.0"
anyhow = "1.0.71"
